DE XML assets from LSO

--- a/l10n/ses/de-de/xml/admin_ceph_datamgm.xml
+++ b/l10n/ses/de-de/xml/admin_ceph_datamgm.xml
@@ -1430,7 +1430,7 @@ row=foo rack=bar host=foo-bar-1</screen>
   <title>Scrubbing von Platzierungsgruppen</title>
 
   <para>
-   Ceph legt nicht nur mehrere Kopien der Objekte an, sondern schützt die Datenintegrität durch <emphasis>Scrubbing</emphasis> der Platzierungsgruppen (für weitere Informationen zu Platzierungsgruppen, siehe das <xref linkend="storage-intro-structure-pg"/>). Ceph Scrubbing ist analog zur Ausführung von <command>fsck</command> auf Objektspeicherebene zu verstehen. Ceph generiert für jede Placement Group einen Katalog aller Objekte und vergleicht jedes primäre Objekt und dessen Reproduktionen, um sicherzustellen, dass keine Objekte fehlen oder falsch abgeglichen wurden. Beim täglichen Light Scrubbing werden die Objektgröße und Attribute geprüft. Beim wöchentlichen Deep Scrubbing werden die Daten gelesen und die Datenintegrität wird anhand von Prüfsummen sichergestellt.
+   Ceph legt nicht nur mehrere Kopien der Objekte an, sondern schützt die Datenintegrität durch <emphasis>Scrubbing</emphasis> der Platzierungsgruppen (für weitere Informationen zu Platzierungsgruppen, siehe das <xref linkend="storage-intro-structure-pg"/>). Ceph Scrubbing ist analog zur Ausführung von <command>fsck</command> auf Objektspeicherebene zu verstehen. Ceph generiert für jede Placement Group einen Katalog aller Objekte und vergleicht jedes primäre Objekt und dessen Reproduktionen, um sicherzustellen, dass keine Objekte fehlen oder falsch abgeglichen wurden. Beim täglichen leichten Scrubbing werden die Objektgröße und Attribute geprüft. Beim wöchentlichen umfassenden Scrubbing werden die Daten gelesen und die Datenintegrität wird anhand von Prüfsummen sichergestellt.
   </para>
 
   <para>
@@ -1535,7 +1535,7 @@ row=foo rack=bar host=foo-bar-1</screen>
     <term><option>osd deep scrub interval</option></term>
     <listitem>
      <para>
-      Das Intervall für ein Deep Scrubbing (alle Daten werden vollständig gelesen). Die Option <option>osd scrub load threshold</option> hat keinen Einfluss auf diese Einstellung. Der Standardwert ist 60*60*24*7 (einmal pro Woche).
+      Das Intervall für ein umfassendes Scrubbing (alle Daten werden vollständig gelesen). Die Option <option>osd scrub load threshold</option> hat keinen Einfluss auf diese Einstellung. Der Standardwert ist 60*60*24*7 (einmal pro Woche).
      </para>
     </listitem>
    </varlistentry>
@@ -1551,7 +1551,7 @@ row=foo rack=bar host=foo-bar-1</screen>
     <term><option>osd deep scrub stride</option></term>
     <listitem>
      <para>
-      Lesegröße für ein Deep Scrubbing. Der Standardwert ist 524288 (512 kB).
+      Lesegröße für einen umfassenden Scrub. Der Standardwert ist 524288 (512 kB).
      </para>
     </listitem>
    </varlistentry>
