--- a/l10n/ses/de-de/xml/admin_ceph_iscsi.xml
+++ b/l10n/ses/de-de/xml/admin_ceph_iscsi.xml
@@ -180,7 +180,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Geben Sie im Dialogfeld <guimenu>Discover Target Portal</guimenu> (Zielportal ermitteln) den Hostnamen oder die IP-Adresse im Feld <guimenu>Ziel</guimenu> ein und klicken Sie auf <guimenu>OK</guimenu>:
+      Geben Sie im Dialogfeld <guimenu>Zielportal ermitteln</guimenu> den Hostnamen oder die IP-Adresse im Feld <guimenu>Ziel</guimenu> ein und klicken Sie auf <guimenu>OK</guimenu>:
      </para>
      <figure>
       <title>Zielportal ermitteln</title>
@@ -196,7 +196,7 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Wiederholen Sie diesen Vorgang für alle Gateway-Hostnamen oder IP-Adressen. Überprüfen Sie nach Fertigstellung die Liste <guimenu>Target Portals</guimenu> (Zielportale):
+      Wiederholen Sie diesen Vorgang für alle Gateway-Hostnamen oder IP-Adressen. Überprüfen Sie nach Fertigstellung die Liste <guimenu>Zielportale</guimenu>:
      </para>
      <figure>
       <title>Zielportale</title>
@@ -228,12 +228,12 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
     </step>
     <step>
      <para>
-      Klicken Sie auf <guimenu>Connect</guimenu> (Verbinden) auf der Registerkarte <guimenu>Ziele</guimenu>. Das Dialogfeld <guimenu>Connect To Target</guimenu> (Mit Ziel verbinden) wird angezeigt. Aktivieren Sie das Kontrollkästchen für <guimenu>Enable Multi-path</guimenu> (Multipfad aktivieren), um die Multipfad-E/A (MPIO) zu aktivieren und klicken Sie anschließend auf <guimenu>OK</guimenu>:
+      Klicken Sie auf <guimenu>Verbinden</guimenu> auf der Registerkarte <guimenu>Ziele</guimenu>. Das Dialogfeld <guimenu>Mit Ziel verbinden</guimenu> wird angezeigt. Aktivieren Sie das Kontrollkästchen für <guimenu>Multipfad aktivieren</guimenu>, um die Multipfad-E/A (MPIO) zu aktivieren und klicken Sie anschließend auf <guimenu>OK</guimenu>:
      </para>
     </step>
     <step>
      <para>
-      Wenn das Dialogfeld <guimenu>Connect to Target</guimenu> (Mit Ziel verbinden) geschlossen wird, wählen Sie <guimenu>Eigenschaften</guimenu> aus, um die Eigenschaften des Ziels zu prüfen:
+      Wenn das Dialogfeld <guimenu>Mit Ziel verbinden</guimenu> geschlossen wird, wählen Sie <guimenu>Eigenschaften</guimenu> aus, um die Eigenschaften des Ziels zu prüfen:
      </para>
      <figure>
       <title>Eigenschaften des iSCSI-Ziels</title>
@@ -263,20 +263,20 @@ size=2.0G features='1 queue_if_no_path' hwhandler='1 alua' wp=rw
       </mediaobject>
      </figure>
      <para>
-      Die standardmäßige <guimenu>Load Balance policy</guimenu> (Lastausgleichrichtlinie) ist <guimenu>Round Robin With Subset</guimenu> (Round-Robin mit Teilmenge). Wenn Sie eine reine Failover-Konfiguration bevorzugen, ändern Sie die Einstellung zu <guimenu>Fail Over Only</guimenu> (Nur Failover).
+      Die standardmäßige <guimenu>Load Balance policy</guimenu> (Lastausgleichrichtlinie) ist <guimenu>Round Robin With Subset</guimenu> (Round-Robin mit Teilmenge). Wenn Sie eine reine Failover-Konfiguration bevorzugen, ändern Sie die Einstellung zu <guimenu>Nur Failover</guimenu>.
      </para>
     </step>
    </procedure>
    <para>
-    Damit ist die iSCSI-Initiator-Konfiguration abgeschlossen. Die iSCSI-Volumes sind nun verfügbar wie alle anderen SCSI-Geräte und können zur Verwendung als Volumes und Laufwerke initialisiert werden. Klicken Sie auf <guimenu>OK</guimenu>, um das Dialogfeld <guimenu>iSCSI Initiator Properties</guimenu> (Eigenschaften des iSCSI-Initiators) zu schließen und fahren Sie mit der Rolle <guimenu>File and Storage Services</guimenu> (Datei- und Speicherdienste) am <guimenu>Server Manager</guimenu>-Dashboard fort.
+    Damit ist die iSCSI-Initiator-Konfiguration abgeschlossen. Die iSCSI-Volumes sind nun verfügbar wie alle anderen SCSI-Geräte und können zur Verwendung als Volumes und Laufwerke initialisiert werden. Klicken Sie auf <guimenu>OK</guimenu>, um das Dialogfeld <guimenu>Eigenschaften des iSCSI-Initiators</guimenu> zu schließen und fahren Sie mit der Rolle <guimenu>Datei- und Speicherdienste</guimenu> am <guimenu>Server Manager</guimenu>-Dashboard fort.
    </para>
    <para>
-    Beobachten Sie das neu verbundene Volume. Es ist am iSCSI-Bus als <emphasis>SUSE RBD SCSI Multi-Path Drive</emphasis> (SUSE RBD SCSI-Multipfadlaufwerk) gekennzeichnet. Es ist zu Beginn mit einem <emphasis>Offline</emphasis>-Status markiert und einem Partitionstabellentyp <emphasis>Unbekannt</emphasis>. Wenn das neue Volume nicht sofort angezeigt wird, wählen Sie <guimenu>Rescan Storage</guimenu> (Speicher neu absuchen) aus dem Dropdown-Feld <guimenu>Tasks</guimenu> (Aufgaben) aus, um den iSCSI-Bus neu abzusuchen.
+    Beobachten Sie das neu verbundene Volume. Es ist am iSCSI-Bus als <emphasis>SUSE RBD SCSI-Multipfadlaufwerk</emphasis> gekennzeichnet. Es ist zu Beginn mit einem <emphasis>Offline</emphasis>-Status markiert und einem Partitionstabellentyp <emphasis>Unbekannt</emphasis>. Wenn das neue Volume nicht sofort angezeigt wird, wählen Sie <guimenu>Speicher neu absuchen</guimenu> aus dem Dropdown-Feld <guimenu>Aufgaben</guimenu> aus, um den iSCSI-Bus neu abzusuchen.
    </para>
    <procedure>
     <step>
      <para>
-      Klicken Sie mit der rechten Maustaste auf das iSCSI-Volume und wählen Sie im Kontextmenü <guimenu>New Volume</guimenu> (Neues Volume) aus. Der <guimenu>New Volume Wizard</guimenu> (Assistent für neue Volumes) wird angezeigt. Klicken Sie auf <guimenu>Weiter</guimenu>, heben Sie das neu verbundene iSCSI-Volume hervor und klicken Sie auf <guimenu>Weiter</guimenu>, um zu beginnen.
+      Klicken Sie mit der rechten Maustaste auf das iSCSI-Volume und wählen Sie im Kontextmenü <guimenu>Neues Volume</guimenu> aus. Der <guimenu>Assistent für neue Volumes</guimenu> wird angezeigt. Klicken Sie auf <guimenu>Weiter</guimenu>, heben Sie das neu verbundene iSCSI-Volume hervor und klicken Sie auf <guimenu>Weiter</guimenu>, um zu beginnen.
      </para>
      <figure>
       <title>Assistent für neue Volumes</title>
