--- a/l10n/ses/de-de/xml/admin_operating_monitor.xml
+++ b/l10n/ses/de-de/xml/admin_operating_monitor.xml
@@ -555,7 +555,7 @@ osd.2 is near full at 87%
     </listitem>
    </varlistentry>
    <varlistentry>
-    <term>POOL_APP_NOT_ENABLED¶</term>
+    <term>POOL_APP_NOT_ENABLED</term>
     <listitem>
      <para>
       Es ist zwar ein Pool mit einem oder mehreren Objekten vorhanden, wurde jedoch nicht für die Verwendung durch eine bestimmte Anwendung gekennzeichnet. Heben Sie diese Warnmeldung auf, indem Sie den Pool für die Verwendung durch eine Anwendung kennzeichnen. Beispiel, wenn der Pool von RBD verwendet wird:
@@ -648,7 +648,7 @@ osd.2 is near full at 87%
     <term>PG_NOT_DEEP_SCRUBBED</term>
     <listitem>
      <para>
-      Bei einer oder mehreren PGs wurden länger kein Deep Scrubbing durchgeführt (weitere Informationen hierzu finden Sie in <xref linkend="scrubbing-pgs"/>). Bei PGs wird normalerweise alle <option>osd_deep_mon_scrub_interval</option> Sekunden ein Scrubbing durchgeführt und diese Warnmeldung wird ausgelöst, wenn dieser <option>mon_warn_not_deep_scrubbed</option>-Zeitraum ohne Scrubbing abgelaufen ist. Bei PGs wird kein (Deep) Scrubbing durchgeführt, wenn sie nicht als intakt („clean“) gekennzeichnet sind. Dies kann vorkommen, wenn sie falsch platziert wurden oder eingeschränkt leistungsfähig sind (weitere Informationen hierzu finden Sie oben unter PG_AVAILABILITY und PG_DEGRADED). Ein Scrubbing einer intakten PG wird manuell initiiert mit:
+      Bei einer oder mehreren PGs wurden länger kein umfassender Scrub durchgeführt (weitere Informationen hierzu finden Sie in <xref linkend="scrubbing-pgs"/>). Bei PGs wird normalerweise alle <option>osd_deep_mon_scrub_interval</option> Sekunden ein Scrubbing durchgeführt und diese Warnmeldung wird ausgelöst, wenn dieser <option>mon_warn_not_deep_scrubbed</option>-Zeitraum ohne Scrubbing abgelaufen ist. Bei PGs wird kein (Deep) Scrubbing durchgeführt, wenn sie nicht als intakt („clean“) gekennzeichnet sind. Dies kann vorkommen, wenn sie falsch platziert wurden oder eingeschränkt leistungsfähig sind (weitere Informationen hierzu finden Sie oben unter PG_AVAILABILITY und PG_DEGRADED). Ein Scrubbing einer intakten PG wird manuell initiiert mit:
      </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph pg deep-scrub <replaceable>pgid</replaceable></screen>
     </listitem>
