--- a/l10n/ses/de-de/xml/admin_operating_pools.xml
+++ b/l10n/ses/de-de/xml/admin_operating_pools.xml
@@ -470,7 +470,7 @@ mon_allow_pool_delete config option to true before you can destroy a pool</scree
      <term>noscrub,nodeep-scrub</term>
      <listitem>
       <para>
-       Deaktiviert (Deep-)Scrubbing der Daten für den entsprechenden Pool, um eine vorübergehend hohe E/A-Last zu vermeiden.
+       Deaktiviert (umfassendes) Scrubbing der Daten für den entsprechenden Pool, um eine vorübergehend hohe E/A-Last zu vermeiden.
       </para>
      </listitem>
     </varlistentry>
@@ -502,7 +502,7 @@ mon_allow_pool_delete config option to true before you can destroy a pool</scree
      <term>deep_scrub_interval</term>
      <listitem>
       <para>
-       Das Intervall in Sekunden für ein <emphasis>deep</emphasis> Scrubbing des Pools. Der Standardwert <literal>0</literal> bedeutet, dass der Wert <option>osd_deep_scrub</option> aus der Ceph-Konfigurationsdatei verwendet wird.
+       Das Intervall in Sekunden für einen <emphasis>umfassenden</emphasis> Scrub des Pools. Der Standardwert <literal>0</literal> bedeutet, dass der Wert <option>osd_deep_scrub</option> aus der Ceph-Konfigurationsdatei verwendet wird.
       </para>
      </listitem>
     </varlistentry>
