--- a/l10n/ses/de-de/xml/admin_saltcluster.xml
+++ b/l10n/ses/de-de/xml/admin_saltcluster.xml
@@ -1066,7 +1066,7 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    <itemizedlist>
     <listitem>
      <para>
-      Der OSD-Datenträger ist laut SMART-Informationen ausgefallen (oder wird bald ausfallen), weshalb keine Daten sicher mehr darauf gespeichert werden können.
+      Der OSD-Datenträger ist laut SMART-Informationen ausgefallen (oder wird bald ausfallen), weshalb keine Daten mehr sicher darauf gespeichert werden können.
      </para>
     </listitem>
     <listitem>
@@ -1106,10 +1106,10 @@ OSD_ID  HOST         STATE                    PG_COUNT  REPLACE  FORCE  STARTED_
    </tip>
    <note>
     <para>
-     Falls Sie ein OSD nach einem Ausfall austauschen, wird dringend empfohlen, einen Deep Scrub der Platzierungsgruppen auszulösen. Weitere Einzelheiten finden Sie unter <xref linkend="scrubbing-pgs"/>.
+     Falls Sie ein OSD nach einem Ausfall austauschen, wird dringend empfohlen, einen umfassenden Scrub der Platzierungsgruppen auszulösen. Weitere Einzelheiten finden Sie unter <xref linkend="scrubbing-pgs"/>.
     </para>
     <para>
-     Führen Sie folgendes Kommando aus, um einen Deep Scrub zu starten:
+     Führen Sie folgendes Kommando aus, um einen umfassenden Scrub zu starten:
     </para>
 <screen><prompt>cephuser@adm &gt; </prompt>ceph osd deep-scrub osd.<replaceable>OSD_NUMBER</replaceable></screen>
    </note>
