--- a/l10n/ses/de-de/xml/deploy_bootstrap.xml
+++ b/l10n/ses/de-de/xml/deploy_bootstrap.xml
@@ -763,7 +763,7 @@ skopeo sync --src docker --dest dir registry.suse.com/ses/7.1/ceph/prometheus-al
     </para>
    </note>
    <para>
-    Führen Sie zum <emphasis>Erzwingen des </emphasis> <literal>sicheren</literal> Modus folgende Kommandos aus:
+    Führen Sie zum <emphasis>Erzwingen des</emphasis> <literal>secure</literal> Modus folgende Kommandos aus:
    </para>
 <screen><prompt>root@master # </prompt>ceph-salt config /cephadm_bootstrap/ceph_conf/global set ms_cluster_mode secure
 <prompt>root@master # </prompt>ceph-salt config /cephadm_bootstrap/ceph_conf/global set ms_service_mode secure
