--- a/l10n/ses/de-de/xml/upgrade-to-pacific.xml
+++ b/l10n/ses/de-de/xml/upgrade-to-pacific.xml
@@ -80,7 +80,7 @@
   <sect2 xml:id="upgrade-backup-config-data-7p">
    <title>Sichern der Cluster-Konfiguration und -Daten</title>
    <para>
-    Es wird dringend empfohlen, die gesamte Cluster-Konfiguration und alle Daten zu sichern, bevor Sie mit dem Upgrade beginnen. Anweisungen zur Sicherung aller Daten finden Sie unter <xref linkend="cha-deployment-backup"/>.
+    Es wird dringend empfohlen, die gesamte Cluster-Konfiguration und alle Daten zu sichern, bevor Sie mit dem Upgrade beginnen. Anweisungen zur Sicherung aller Daten finden Sie im <xref linkend="cha-deployment-backup"/>.
    </para>
   </sect2>
 
