--- a/l10n/ses/de-de/xml/common_intro_support.xml
+++ b/l10n/ses/de-de/xml/common_intro_support.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="de" version="5.1">
+<sect1 xmlns="http://docbook.org/ns/docbook" xmlns:xi="http://www.w3.org/2001/XInclude" xmlns:xlink="http://www.w3.org/1999/xlink" xml:base="common_intro_support.xml" xml:lang="en" version="5.1">
  <title>Support</title>
 
  <info>
@@ -9,7 +9,7 @@
  </info>
 
  <para>
-  Im Folgenden finden Sie die Supportbestimmung für SUSE Enterprise Storage sowie allgemeine Informationen über Technologievorschauen. Details über den Produktlebenszyklus finden Sie im <link xlink:href="https://www.suse.com/lifecycle"/>.
+  Im Folgenden finden Sie die Supportbestimmung für SUSE Enterprise Storage sowie allgemeine Informationen über Technologievorschauen. Details über den Produktlebenszyklus finden Sie unter <link xlink:href="https://www.suse.com/lifecycle"/>.
  </para>
  <para>
   Wenn Sie Anspruch auf Support haben, finden Sie Details zum Sammeln von Informationen für ein Support-Ticket unter <link xlink:href="https://documentation.suse.com/sles-15/html/SLES-all/cha-adm-support.html"/>.
