--- a/l10n/ses/de-de/xml/deploy_additional.xml
+++ b/l10n/ses/de-de/xml/deploy_additional.xml
@@ -282,7 +282,7 @@
 </screen>
      <note>
       <para>
-       Die Benutzernamen müssen 8 bis 64 Zeichen lang sein und dürfen alphanumerische Zeichen, <literal>&#x002E;</literal>, <literal>@</literal>, <literal>-</literal>, <literal>_</literal> oder <literal>:</literal> enthalten.
+       Die Benutzernamen müssen 8 bis 64 Zeichen lang sein und dürfen alphanumerische Zeichen, <literal>&period;</literal>, <literal>@</literal>, <literal>-</literal>, <literal>_</literal> oder <literal>:</literal> enthalten.
       </para>
       <para>
        Die Passwörter müssen 12 bis 16 Zeichen lang sein und dürfen alphanumerische Zeichen enthalten, , <literal>@</literal>, <literal>-</literal>, <literal>_</literal> oder <literal>/</literal>.
@@ -303,7 +303,7 @@
 </screen>
      <note>
       <para>
-       Die Benutzernamen müssen 8 bis 64 Zeichen lang sein und dürfen nur Buchstaben, <literal>&#x002E;</literal>, <literal>@</literal>, <literal>-</literal>, <literal>_</literal> oder <literal>:</literal> enthalten.
+       Die Benutzernamen müssen 8 bis 64 Zeichen lang sein und dürfen nur Buchstaben, <literal>&period;</literal>, <literal>@</literal>, <literal>-</literal>, <literal>_</literal> oder <literal>:</literal> enthalten.
       </para>
       <para>
        Die Passwörter müssen 12 bis 16 Zeichen lang sein und dürfen nur Buchstaben enthalten, <literal>@</literal>, <literal>-</literal>, <literal>_</literal> oder <literal>/</literal>.
@@ -640,7 +640,7 @@
     </para>
    </warning>
    <para>
-    Im Gegensatz zur Kernel-basierten  iSCSI-Gateway-Bereitstellung unterstützen <systemitem>tcmu-runner</systemitem>-basierte iSCSI Gateways keine Multipath E/A oder permanente SCSI-Reservierungen.
+    Im Gegensatz zur Kernel-basierten iSCSI-Gateway-Bereitstellung unterstützen <systemitem>tcmu-runner</systemitem>-basierte iSCSI Gateways keine Multipath E/A oder permanente SCSI-Reservierungen.
    </para>
    <para>
     Soll ein RADOS Block Device.Image mit <systemitem>tcmu-runner</systemitem> exportiert werden, müssen Sie lediglich den <option>user:rbd</option>-Backstore angeben, wenn Sie den Datenträger anhängen:
